--- a/Code/Project/Static/style.css
+++ b/Code/Project/Static/style.css
@@ -189,6 +189,19 @@ body{
 .text-gray-200{
   color: var(--clr-text-gray-200);
 }
+.text-gold{
+  color: #D08A37;
+}
+.text-gold-glow{
+  color: #D08A37;
+  filter: drop-shadow(0px 4px 4px #D08A3788);
+}
+.bg-gold{
+  background-color: #A37826;
+}
+.bg-gold2{
+  background-color: #6e511b;
+}
 .bg-accent-brown{
   background: var(--clr-bg-accent-brown);
 }
@@ -203,6 +216,12 @@ body{
 }
 .bg-gray-200{
   background: var(--clr-bg-gray-200);
+}
+.bg-black-100{
+  background: var(--clr-text-black-200);
+}
+.bg-black-200{
+  background-color: var(--clr-text-black-300);
 }
 .bg-trn-gray-100{
   background: var(--clr-bg-trn-gray-100);
@@ -219,7 +238,10 @@ body{
 .bg-trn-black-500{
   background: var(--clr-bg-trn-black-500);
 }
-
+.logout{
+  background-color: #FF3D3D;
+  color: #F1F1F1;
+}
 /* font size */
 .fs-100{
   font-size: var(--fs-100);
@@ -340,6 +362,11 @@ body{
   display: flex;
   flex-direction: row;
 }
+.fx-row-a-center{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
 .fx-col{
   display: flex;
   flex-direction: column;
@@ -367,6 +394,11 @@ body{
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+}
+.fx-col-space-between{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .align-center{
   align-items: center;
@@ -565,4 +597,48 @@ footer a{
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+}
+.fx-row-space-between{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+ul, .messages {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  margin-block: 0;
+  background-color: #3c3c3c;
+}
+
+.success {
+  padding: 0.1rem 0.5rem;
+  display: flex;
+  align-items: center;
+  width: 97vw;
+  height: 100%;
+  color: green;
+  background-color: #daffda;
+  border: 1px solid #4caf50;
+}
+
+.error {
+  padding: 0.1rem 0.5rem;
+  display: flex;
+  align-items: center;
+  width: 97vw;
+  height: 100%;
+  color: #ae1c1c;
+  background-color: #ff8080;
+}
+
+.warning{
+  padding: 0.1rem 0.5rem;
+  display: flex;
+  align-items: center;
+  width: 97vw;
+  height: 100%;
+  color: #ffee00;
+  background-color: #958b00;
 }
