added mail confirmation

--- a/Code/Project/Static/style.css
+++ b/Code/Project/Static/style.css
@@ -639,6 +639,6 @@ ul, .messages {
   align-items: center;
   width: 97vw;
   height: 100%;
-  color: #ffee00;
-  background-color: #958b00;
+  color:  #958b00;
+  background-color: #ffee00;
 }
