--- a/Code/Project/Templates/profile.html
+++ b/Code/Project/Templates/profile.html
@@ -101,7 +101,7 @@
             <div class="pd-inl-100 pd-blk-300">
               <span class="text-white-100">
                 <span>Credits:</span>
-                <span>$300,000 only</span>
+                <span>${{credits}} only</span>
               </span>
               <p class="text-gray-100">$500,000 minimum balance gives you Premium suite for 10% discount</p>
               <form action="/profile" method="post">
